# wasmtris

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy.yml
src/: computer_player.rs  draw.rs  game.rs  jitter_computer.rs  lib.rs  utils.rs
www/: Dockerfile  index.html  index.js  nginx.conf  package-lock.json  package.json  webpack.config.js
