[package]
name = "wasmtris"
version = "0.1.0"
authors = ["Olle Sandberg <olle@b3rg.se>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
rstris = { git = "https://github.com/oll3/rstris" }
js-sys = "0.3.28"
nalgebra = "0.18"
nalgebra-glm = "0.4"

console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4", optional = true }

[dependencies.rand]
version = "0.7.2"
features = ["wasm-bindgen"]

[dependencies.web-sys]
version = "0.3"
features = [
    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'WebGlBuffer',
    'WebGlRenderingContext',
    'WebGlUniformLocation',
    'WebGlVertexArrayObject',
    'WebGlProgram',
    'WebGlShader',
    'Window',
]

[dev-dependencies]
wasm-bindgen-test = "0.3.1"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3
lto = true
#debug = true
