[package]
name = "wasmtris"
version = "0.1.0"
authors = ["Olle Sandberg <olle@b3rg.se>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
rstris = { git = "https://github.com/oll3/rstris" }
js-sys = "0.3.91"
nalgebra = "0.34"
nalgebra-glm = "0.20"

console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = { version = "0.4", optional = true }

[dependencies.rand]
version = "0.10.1"

[dependencies.getrandom]
version = "0.4"
features = ["wasm_js"]

[dependencies.web-sys]
version = "0.3"
features = [
    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'WebGlBuffer',
    'WebGlRenderingContext',
    'WebGlUniformLocation',
    'WebGlVertexArrayObject',
    'WebGlProgram',
    'WebGlShader',
    'Window',
]

[dev-dependencies]
wasm-bindgen-test = "0.3.64"

[profile.release]
opt-level = 3
lto = true
